<resources>
    <string name="app_name">RoomApp</string>
    <string name="todo">todo</string>
    <string name="price_room">$ 4.0</string>
    <string name="standard">Estandar Cama Doble</string>
    <string name="area">16mxn</string>
    <string name="typebed">Cama Doble</string>
    <string name="detail">Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula senectus tellus, vestibulum auctor lacinia ac
        nullam tincidunt mattis penatibus montes dictumst arcu, nisi elementum pulvinar primis convallis parturient vel
        ornare justo. A urna sociis faucibus hendrerit phasellus mus maecenas risus posuere commodo, curabitur nunc
        quam venenatis cras eleifend dis praesent.</string>
    <string name="detalle">Detalle</string>
    <string name="title_activity_maps">Map</string>
    <string name="reservar">Reservar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">apellido</string>
    <string name="email">email</string>
    <string name="telefono">telefono</string>
    <string name="fecha_llegada">Fecha llegada</string>
    <string name="fechasalida">Fecha Salida</string>
    <string name="reserva">Reserva</string>
    <string name="ver_detalles">Ver detalles</string>
    <string name="por_noche">/por noche</string>
    <string name="buscar_mapa">Buscar Mapa</string>


    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="total_pagar">Total Pagar</string>
    <string name="standar_cama_doble">Standar Cama Doble</string>
    <string name="numero_de_noches">Numero de noches</string>
    <string name="_2">2</string>
    <string name="total">Total</string>
    <string name="_8_00">$ 8.00</string>
    <string name="pagar">Pagar</string>
</resources>
