<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        tools:context=".Main3Activity">


        <TextView
            android:id="@+id/reser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserva"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/reser"
           >
            <EditText
                android:id="@+id/username"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:maxLines="1"
                android:padding="10dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reser"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/text1">
            <EditText
                android:id="@+id/userlastname"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/apellido"
                android:maxLines="1"
                android:padding="10dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp"
            android:layout_below="@id/text1">
            <EditText
                android:id="@+id/useremail"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLines="1"
                android:padding="10dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/text3"
            android:layout_marginEnd="14dp"
            android:layout_below="@id/text2">
            <EditText
                android:id="@+id/userphone"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:maxLines="1"
                android:padding="10dp"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textarrval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_llegada"
            android:textSize="18sp"
            android:layout_below="@id/text4"
            android:layout_marginTop="50dp"
            android:layout_marginStart="14dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text5"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_below="@id/textarrval">
            <EditText
                android:id="@+id/arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="10dp"
                android:inputType="date"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/ib_obtener_fecha1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text5"
            android:layout_alignTop="@id/text5"
            android:src="@drawable/ic_perm"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/departureTect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechasalida"
            android:textSize="18sp"
            android:layout_below="@id/text5"
            android:layout_marginTop="50dp"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text6"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_below="@id/departureTect"
            >
            <EditText
                android:id="@+id/departure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="10dp"
                android:inputType="date"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/ib_obtener_fecha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text6"
            android:layout_alignTop="@id/text6"
            android:src="@drawable/ic_perm"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titleRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text6"
            android:textSize="19sp"
            android:layout_marginTop="40dp"
            android:text="@string/standard"
            android:textColor="#212121"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_room"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="19sp"
            android:layout_below="@id/titleRoom"
            />

        <TextView
            android:id="@+id/detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_detalles"
            android:textSize="19sp"
            android:layout_alignTop="@id/price"
            android:layout_alignStart="@id/text4"
            android:textColor="@color/colorAmber"
            />
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_alignTop="@id/detalle"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textpagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:text="@string/total_pagar"
            android:textColor="#212121"
            />

        <TextView
            android:id="@+id/textnoches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textpagar"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:text="@string/standar_cama_doble"/>
        <TextView
            android:id="@+id/price2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_room"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_alignTop="@id/textnoches"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textnoches2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_noches"
            android:layout_below="@id/textnoches"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/numnoche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_alignTop="@id/textnoches2"
            android:layout_below="@id/price2"
            android:textSize="18sp"/>
        <View
            android:id="@+id/divider"
            android:layout_alignStart="@id/text2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="18dp"
            android:layout_below="@id/numnoche"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="#212121"
            android:layout_below="@id/divider"
            android:layout_alignStart="@id/divider"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/pricetotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/_8_00"
            android:layout_below="@id/divider"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textColor="@color/colorAmber"/>
        <Button
            android:id="@+id/pyament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botondesign"
            android:text="@string/pagar"
            android:textColor="@color/colorTextWhite"
            android:layout_below="@id/total"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>

</ScrollView>